# todo-app

backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a8650915ecf1_add_task_table.py
backend/features/: tasks.py
backend/models/: db.py  task.py
backend/shared/: logging.py
frontend/: openapi-ts.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/: base.css  colors.css  main.css  timing.css  typography.css
frontend/src/client/: sdk.gen.ts
frontend/src/client/@tanstack/: vue-query.gen.ts
frontend/src/components/: CreateTaskInput.vue  FilterBar.vue  MainInput.vue  Task.vue
frontend/src/composables/: media-query.ts
frontend/src/primitives/: Button.vue  Input.vue
frontend/src/shared/client/: client.gen.ts  index.ts  sdk.gen.ts  types.gen.ts
frontend/src/shared/client/@tanstack/: vue-query.gen.ts
frontend/src/views/: HomeView.vue
